--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,12 @@
+@import url('utils/variables.css');
+
+@import url('components/buttons.css');
+
+
+@import url('components/header.css');
+@import url('components/articles.css');
+@import url('components/footer.css');
+
 * {
     margin: 0;
     padding: 0;
