--- a/css/utils/variables.css
+++ b/css/utils/variables.css
@@ -11,7 +11,7 @@
     --text-2xl: 1.5rem;    /* 24px */
     --text-3xl: 1.875rem;  /* 30px */
     --text-4xl: 2.25rem;   /* 36px */
-    --text-16xl: 3.25rem;   /* 36px */
+    --text-16xl: 3.25rem;   /* 52px */
 }
 
 body {
@@ -31,7 +31,7 @@ body {
     font-size: var(--text-16xl);
 }
 
-.button {
+.btn {
     font-family: var(--font-primary);
     font-weight: 600;
     font-size: var(--text-sm);
