--- a/css/components/buttons.css
+++ b/css/components/buttons.css
@@ -13,17 +13,20 @@
 
 .btn--primary {
     border: 1px solid var(--black);
+    background: var(--white);
     border-radius: 8px;
 }
 
 .btn--primary:hover {
     color: var(--white);
     background: var(--black);
+    border: 1px solid var(--black);
 }
 
 .btn--secondary {
     color: var(--white);
     background: var(--black);
+    border: 1px solid var(--black);
     border-radius: 8px;
 }
 
