--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
 
 
 @import url('components/header.css');
+@import url('components/hero.css');
 @import url('components/articles.css');
 @import url('components/footer.css');
 
@@ -16,37 +17,5 @@
 :root {
     --black: #000000;
     --white: #ffffff;
-}
-
-.header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 1000;
-    background: var(--white);
-    padding: 14px 24px;
-}
-
-.nav__container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.nav__list {
-    display: flex;
-    gap: 1rem;
-    list-style: none;
-}
-
-.nav__link {
-    color: var(--black);
-    text-decoration: none;
-    padding: 0 8px;
-}
-
-.nav__link:hover {
-    color: #737373;
-    text-decoration: none;
+    --grey: #F9F8FE;
 }
