--- a/css/utils/variables.css
+++ b/css/utils/variables.css
@@ -30,6 +30,7 @@ body {
     font-family: var(--font-accent);
     font-weight: 700;
     font-size: var(--text-16xl);
+    line-height: 1.28;
 }
 
 .subtitle{
@@ -38,8 +39,18 @@ body {
     font-size: 22px;
 }
 
+.article__name{
+    font-family: var(--font-secondary);
+    font-weight: 500;
+    font-size: var(--text-lg);
+}
+
 .btn {
     font-family: var(--font-primary);
     font-weight: 600;
     font-size: var(--text-sm);
+}
+
+.background__grey{
+    background-color: var(--grey);
 }
