--- a/css/components/articles.css
+++ b/css/components/articles.css
@@ -12,7 +12,6 @@
 }
 
 .img__revolutionize {
-    border-radius: 8px;
     margin: 22px 0;
 }
 
@@ -34,4 +33,36 @@
     align-items: center;
     gap: 13px;
     margin-top: 26px;
+}
+
+.article__discover1{
+    display: flex;
+    flex-direction: column;
+    gap: 80px;
+    margin-top: 18px;
+}
+
+.discover1__text{
+    display: flex;
+    flex-direction: column;
+    gap: 22px;
+    max-width: 848px;
+}
+
+.discover1__blocks{
+    display: flex;
+    gap: 48px;
+}
+
+.discover1__block{
+    display: flex;
+    flex-direction: column;
+    gap: 18px;
+    font-size: 16px;
+}
+
+.discover1__buttons {
+    display: flex;
+    align-items: center;
+    gap: 13px;
 }
