--- a/css/components/header.css
+++ b/css/components/header.css
@@ -1,4 +1,4 @@
-.header {
+.nav{
     position: fixed;
     top: 0;
     left: 0;
@@ -14,14 +14,13 @@
 
 .nav__list {
     display: flex;
-    gap: 16px;
+    gap: 17px;
     list-style: none;
 }
 
 .nav__link {
     color: var(--black);
     text-decoration: none;
-    gap: 10px;
     padding: 0 8px;
 }
 
