--- a/css/components/hero.css
+++ b/css/components/hero.css
@@ -5,7 +5,7 @@
     object-position: center;
 }
 
-.hero__container{
+.hero__item{
     display: flex;
     justify-content: space-between;
     padding: 77px 80px;
@@ -23,7 +23,7 @@
     gap: 22px;
 }
 
-.hero__btn{
+.hero__actions{
     display: flex;
     gap: 14px;
 }
