--- a/css/components/articles.css
+++ b/css/components/articles.css
@@ -127,3 +127,34 @@
     flex-direction: column;
     gap: 16px;
 }
+
+/* Subscribe  block */
+.subscribe{
+    display: flex;
+    flex-direction: column;
+    padding: 89px 80px;
+    align-items: center;
+    gap: 48px;
+}
+
+.subscribe__text{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+    padding-top: 23px;
+}
+
+.subscribe__input{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+    padding-bottom: 20px;
+}
+
+.subscribe__form{
+    display: flex;
+    gap: 16px;
+    min-width: 483px;
+}
