--- a/css/styles.css
+++ b/css/styles.css
@@ -33,3 +33,10 @@ main img{
     align-items: center;
     gap: 13px;
 }
+
+.input{
+    width: 100%;
+    padding: 8px 16px;
+    border-radius: 8px;
+    height: 40px;
+}
