--- a/css/components/articles.css
+++ b/css/components/articles.css
@@ -183,3 +183,24 @@
 .img__contact{
     margin-top: 209px;
 }
+
+/* Adaptivity */
+@media (max-width: 768px) {
+    .articles__item,
+    .discover1__blocks,
+    .revolutionize__blocks,
+    .discover3__blocks,
+    .stats__blocks{
+        display: flex;
+        flex-wrap: wrap;
+        gap: 16px;
+    }
+
+    .discover1__block,
+    .revolutionize__block,
+    .discover3__block,
+    .stats__block {
+        flex: 1 1 100%;
+        min-width: 395px;
+    }
+}
