--- a/css/components/hero.css
+++ b/css/components/hero.css
@@ -19,3 +19,10 @@
     flex-direction: column;
     gap: 22px;
 }
+
+@media (max-width: 768px) {
+    .hero__item{
+        flex-wrap: wrap;
+        gap: 22px;
+    }
+}
