--- a/css/styles.css
+++ b/css/styles.css
@@ -45,3 +45,14 @@ main img{
     border-radius: 8px;
     height: 40px;
 }
+
+.icon {
+    width: 24px;
+    height: 24px;
+    fill: currentColor;
+}
+
+.icon--large {
+    width: 32px;
+    height: 32px;
+}
