--- a/css/components/hero.css
+++ b/css/components/hero.css
@@ -21,6 +21,10 @@
 }
 
 @media (max-width: 768px) {
+    .nav{
+        position: relative;
+    }
+
     .hero__item{
         flex-wrap: wrap;
         gap: 22px;
